--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 TAVILY_API_KEY="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"
 
 #Set up LangSmith for LangGraph development
-LANGCHAIN_TRACING_V2="true"
+LANGCHAIN_TRACING_V2="false"
 LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
 LANGSMITH_API_KEY="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"
 LANGCHAIN_PROJECT="anup-blog-post"
